readme file: mapping different GCs to flags